tests/baselines/reference/optionalBindingParametersInOverloads1.errors.txt
tests/cases/conformance/es6/destructuring/optionalBindingParametersInOverloads1.ts(8,6): error TS2322: Type 'boolean' is not assignable to type 'string'.
tests/cases/conformance/es6/destructuring/optionalBindingParametersInOverloads1.ts(8,16): error TS2322: Type 'string' is not assignable to type 'boolean'.


==== tests/cases/conformance/es6/destructuring/optionalBindingParametersInOverloads1.ts (2 errors) ====
    function foo([x, y, z] ?: [string, number, boolean]);
    function foo(...rest: any[]) {
    
    }
    
    foo(["", 0, false]);
    
    foo([false, 0, ""]);
         ~~~~~
!!! error TS2322: Type 'boolean' is not assignable to type 'string'.
                   ~~
!!! error TS2322: Type 'string' is not assignable to type 'boolean'.